--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "11.9.5",
     "@types/react": "16.8.4",
     "@types/react-dom": "16.8.2",
+    "@types/styled-components": "^4.1.10",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -50,6 +51,7 @@
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
+    "styled-components": "^4.1.3",
     "terser-webpack-plugin": "1.2.2",
     "typescript": "3.3.3333",
     "url-loader": "1.1.2",
